Padding and alignment fix

--- a/app/static/app/js/css/ProjectListItem.scss
+++ b/app/static/app/js/css/ProjectListItem.scss
@@ -55,6 +55,8 @@
     }
 
     .project-links{
+        margin-top: 10px;
+        margin-bottom: 10px;
         font-size: 90%;
         i{
             margin-right: 4px;
@@ -76,7 +78,6 @@
     .row{
         margin-left: 0;
         margin-right: 0;
-        margin-top: 10px;
     }
 
     .project-buttons {
